kubernetes/apps/openwebui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: open-webui
  name: open-webui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      volumes:
        - name: webui-data
          persistentVolumeClaim:
            claimName: open-webui-pvc
      containers:
        - image: ghcr.io/open-webui/open-webui:v0.12.0@sha256:1565038903151ced924b5a3226f73f40f16963df4b910441f6391f10144afdaa
          name: open-webui
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: webui-data
              mountPath: /app/backend/data
